prep for release

--- a/install/etc/nginx/conf.d/default.conf
+++ b/install/etc/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    root /srv/vimbadmin/public;
+    root /var/www/vimbadmin/public;
     index index.php;
 
     fastcgi_keep_conn on;
@@ -22,6 +22,6 @@ server {
            include fastcgi_params;
            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
            fastcgi_param DOCUMENT_ROOT $realpath_root;
-           fastcgi_pass upstream;
+           fastcgi_pass 127.0.0.1:9000;
     }
 }
