--- a/install/etc/nginx/nginx.conf
+++ b/install/etc/nginx/nginx.conf
@@ -61,7 +61,7 @@ http {
     }
 
     upstream upstream {
-        server unix:/var/run/php-fpm.sock;
+        server 127.0.0.1:9000;
     }
 
     #include /etc/nginx/allowed_ips.conf;
