--- a/install/etc/php7/php-fpm.conf
+++ b/install/etc/php7/php-fpm.conf
@@ -1,25 +1,18 @@
 [global]
-pid = /run/php-fpm.pid
-error_log = /var/log/php/fpm-error.log
-log_level = notice
 daemonize = no
 
-[app]
-user = www-data
-group = www-data
-listen = /var/run/php-fpm.sock
-listen.owner = nginx
-listen.group = nginx
-listen.mode = 0600
-catch_workers_output = yes
-request_slowlog_timeout = 10
-slowlog = /var/log/php/fpm-slow.log
-security.limit_extensions = .php
-clear_env = yes
-
-pm = ondemand
-pm.max_children = 4
-pm.max_requests = 100
-pm.process_idle_timeout = 30
-                            
-php_value[memory_limit] = 512M
+[www]
+user = nginx
+group = nginx
+listen = 9000
+pm = dynamic
+pm.max_children = 15
+pm.start_servers = 2
+pm.min_spare_servers = 1
+pm.max_spare_servers = 6
+chdir = /
+request_terminate_timeout = 0
+env[PATH] = /usr/local/bin:/usr/bin:/bin
+php_admin_value[max_execution_time] = 10800
+php_admin_value[max_input_time] = 3600
+php_admin_value[expose_php] = Off
